fix reordering bug on mobile

--- a/src/components/Sortable.module.scss
+++ b/src/components/Sortable.module.scss
@@ -6,4 +6,5 @@
   flex-direction: row;
   background-color: white;
   border-bottom: 1px dashed $gray6;
+  touch-action: none;
 }
